modify: LinkedIn link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 <p>
                     <i class="fab fa-linkedin" aria-hidden="true"></i>
-                    <a href="linkedin.com/ada-vargas">Ada Vargas</a>
+                    <a href="https://www.linkedin.com/in/ada-vargas">Ada Vargas</a>
                 </p>
     
                 </section> 
