change: GitHub link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <p>
                     <i class="fab fa-github" aroa-hidden="true"></i>
-                    <a href="github.com/Jim-VA"> Jim-VA</a>
+                    <a href="https://github.com/Jim-VA"> Jim-VA</a>
                 </p>
 
                 <p>
